--- a/src/main/resources/templates/listBooks.html
+++ b/src/main/resources/templates/listBooks.html
@@ -31,6 +31,19 @@
     <h1>Welcome to our Book Reservation App</h1>
 </header>
 <main>
+    <form action="/" method="GET">
+        <h2>Filter books:</h2>
+
+        <label>Name:</label>
+        <input type="text" name="filterName" required/>
+        <br />
+
+        <label>Rating:</label>
+        <input type="number" name="filterRating" step=".01" min="0" value="0" required />
+        <br />
+
+        <button type="submit">Filter</button>
+    </form>
     <form action="/bookReservation" method="POST">
         <h2>Choose a book:</h2>
 
